--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/b7ccb2552e.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="text-center mb-5">
       <div><h1 class="mt-4 mb-3">AI Universe Hub</h1></div>
-      <div class="">
+      <div>
         <button type="button" class="btn btn-danger">Sort By Date</button>
       </div>
     </header>
@@ -25,13 +29,28 @@
           <div class="card">
             <img src="..." class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
+              <h5 class="card-title">Features</h5>
+              <ol>
+                <li>Natural langauge processing</li>
+                <li>Contextual understanding</li>
+                <li>Text generation</li>
+              </ol>
               <hr />
+              <div class="d-flex justify-content-between">
+                <div>
+                  <h5 class="card-title">Features</h5>
+                  <i class="fa-solid fa-calendar-days"></i><span></span>
+                </div>
+                <div class="my-auto">
+                  <button
+                    type="button"
+                    class="btn btn-light"
+                    style="border-radius: 50%"
+                  >
+                    <i class="fa-solid fa-arrow-right text-danger"></i>
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -74,6 +93,9 @@
           </div>
         </div>
       </div>
+      <div class="text-center mt-5">
+        <button type="button" class="btn btn-danger">See more</button>
+      </div>
     </main>
 
     <script
@@ -81,5 +103,6 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script src="connect.js"></script>
   </body>
 </html>
