--- a/index.html
+++ b/index.html
@@ -23,79 +23,23 @@
       </div>
     </header>
 
-    <main class="mx-4">
-      <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Features</h5>
-              <ol>
-                <li>Natural langauge processing</li>
-                <li>Contextual understanding</li>
-                <li>Text generation</li>
-              </ol>
-              <hr />
-              <div class="d-flex justify-content-between">
-                <div>
-                  <h5 class="card-title">Features</h5>
-                  <i class="fa-solid fa-calendar-days"></i><span></span>
-                </div>
-                <div class="my-auto">
-                  <button
-                    type="button"
-                    class="btn btn-light"
-                    style="border-radius: 50%"
-                  >
-                    <i class="fa-solid fa-arrow-right text-danger"></i>
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="..." />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                This is a longer card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
-              </p>
-            </div>
-          </div>
-        </div>
+    <main class="mx-4 mb-4">
+      <div class="row row-cols-1 row-cols-md-3 g-4" id="insert-div"></div>
+      <div id="see-more" class="text-center mt-5 mb-4 d-none">
+        <button type="button" class="btn btn-danger" onclick="dataLimit()">
+          See more
+        </button>
       </div>
-      <div class="text-center mt-5">
-        <button type="button" class="btn btn-danger">See more</button>
-      </div>
+      <section id="load-spinner" class="d-none">
+        <div
+          style="height: 400px"
+          class="d-flex justify-content-center align-items-center"
+        >
+          <div class="spinner-border text-danger" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script
