--- a/index.html
+++ b/index.html
@@ -25,9 +25,6 @@
 
     <main class="mx-4 mb-4">
       <section style="width: 75%">
-        <!-- Button trigger modal -->
-
-        <!-- Modal -->
         <div
           class="modal fade"
           id="exampleModal"
@@ -38,49 +35,7 @@
           <div
             class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg"
           >
-            <div class="modal-content">
-              <div class="modal-header">
-                <button
-                  type="button"
-                  class="btn-close"
-                  data-bs-dismiss="modal"
-                  aria-label="Close"
-                ></button>
-              </div>
-              <div
-                class="modal-body d-flex flex-column flex-lg-row gap-4 mx-auto"
-              >
-                <div class="card border border-danger" style="width: 22rem">
-                  <div class="card-body">
-                    <h6>
-                      Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                      Ipsum nisi totam hic sint consequuntur atque nesciunt
-                      optio vero velit recusandae!
-                    </h6>
-                    <div class="container text-center mt-2">
-                      <div class="row gap-2">
-                        <div class="col border border-1 rounded">/Basic</div>
-                        <div class="col border border-1 rounded">
-                          /month pro
-                        </div>
-                        <div class="col border border-1 rounded">
-                          /Enterprise
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card" style="width: 18rem">
-                  <img src="..." class="card-img-top" alt="..." />
-                  <div class="card-body">
-                    <p class="card-text">
-                      Some quick example text to build on the card title and
-                      make up the bulk of the card's content.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <div class="modal-content" id="show-modal"></div>
           </div>
         </div>
       </section>
