--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <header class="text-center mb-5">
       <div><h1 class="mt-4 mb-3">AI Universe Hub</h1></div>
       <div>
-        <button type="button" class="btn btn-danger">Sort By Date</button>
+        <button type="button" class="btn btn-danger" id="btn-sortBy">
+          Sort By Date
+        </button>
       </div>
     </header>
 
