--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="text-center mb-5">
       <div><h1 class="mt-4 mb-3">AI Universe Hub</h1></div>
       <div>
-        <button type="button" class="btn btn-danger" id="btn-sortBy">
+        <button type="button" class="btn btn-danger" id="sort-by-date">
           Sort By Date
         </button>
       </div>
